Cleaned the data for the ridership route monthly average from 2018 through 2024

--- a/ridership_route.ipynb
+++ b/ridership_route.ipynb
@@ -2,15 +2,97 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "route_or_line          All Bus  Blue Line  ...  The RIDE  Trackless Trolley\n",
+      "Month  Year daytype                        ...                             \n",
+      "April  2019 Saturday  199737.0    43118.0  ...    3037.0             5132.0\n",
+      "            Sunday    129362.0    32580.0  ...    2984.0                NaN\n",
+      "            Total     329252.0    59256.0  ...    5256.0             8248.0\n",
+      "            Weekday   391346.0    67041.0  ...    6063.0            10667.0\n",
+      "       2020 Saturday   69931.0     5205.0  ...     775.0                NaN\n",
+      "            Sunday     47994.0     3978.0  ...     381.0                NaN\n",
+      "            Total      78521.0     6813.0  ...     898.0                NaN\n",
+      "            Weekday    85754.0     7621.0  ...     927.0                NaN\n",
+      "       2021 Saturday  126389.0    22062.0  ...       NaN             2131.0\n",
+      "            Sunday     76283.0    15030.0  ...       NaN                NaN\n",
+      "            Total     159103.0    24418.0  ...    2084.0             2870.0\n",
+      "            Weekday   173694.0    26553.0  ...    2438.0             3423.0\n",
+      "       2022 Saturday  157550.0    29163.0  ...    1729.0                NaN\n",
+      "            Sunday    100034.0    23427.0  ...    1433.0                NaN\n",
+      "            Total     221653.0    33976.0  ...    2789.0                NaN\n",
+      "            Weekday   260082.0    37131.0  ...    3299.0                NaN\n",
+      "       2023 Saturday  170784.0    35502.0  ...    1760.0                NaN\n",
+      "            Sunday    111657.0    26520.0  ...    1523.0                NaN\n",
+      "            Total     237283.0    40869.0  ...    2905.0                NaN\n",
+      "            Weekday   276122.0    45798.0  ...    3536.0                NaN\n",
+      "       2024 Saturday  180035.0    27893.0  ...    1915.0                NaN\n",
+      "            Sunday    128876.0    22071.0  ...    1719.0                NaN\n",
+      "            Total     260543.0    34057.0  ...    3257.0                NaN\n",
+      "            Weekday   289511.0    37514.0  ...    3780.0                NaN\n",
+      "August 2018 Saturday  193918.0    40958.0  ...    3114.0             5018.0\n",
+      "            Sunday    141809.0    35293.0  ...    2933.0                NaN\n",
+      "            Total     319777.0    58838.0  ...    5303.0             8612.0\n",
+      "            Weekday   372157.0    66042.0  ...    5983.0            10735.0\n",
+      "       2019 Saturday  205539.0    45447.0  ...    2968.0             5895.0\n",
+      "            Sunday    136197.0    36418.0  ...    2702.0                NaN\n",
+      "            Total     316766.0    62643.0  ...    6548.0             8171.0\n",
+      "            Weekday   374278.0    71320.0  ...    5722.0            10174.0\n",
+      "       2020 Saturday  123179.0     9259.0  ...    1862.0                NaN\n",
+      "            Sunday     79125.0     7461.0  ...    1254.0                NaN\n",
+      "            Total     137639.0    18554.0  ...    1776.0              105.0\n",
+      "            Weekday   154665.0    23407.0  ...    1937.0              156.0\n",
+      "       2021 Saturday  148289.0    31455.0  ...       NaN             2786.0\n",
+      "            Sunday     90888.0    21965.0  ...       NaN                NaN\n",
+      "            Total     189638.0    33119.0  ...    2166.0             3231.0\n",
+      "            Weekday   219598.0    35956.0  ...    2578.0             4047.0\n",
+      "       2022 Saturday  167646.0    35721.0  ...    1761.0                NaN\n",
+      "            Sunday    118615.0    28545.0  ...    1492.0                NaN\n",
+      "            Total     229718.0    39631.0  ...    2880.0                NaN\n",
+      "            Weekday   259839.0    42239.0  ...    3315.0                NaN\n",
+      "       2023 Saturday  176089.0    44573.0  ...    1913.0                NaN\n",
+      "            Sunday    129224.0    36006.0  ...    1658.0                NaN\n",
+      "            Total     243318.0    48872.0  ...    3130.0                NaN\n",
+      "            Weekday   274853.0    51857.0  ...    3597.0                NaN\n",
+      "       2024 Saturday  187881.0    34753.0  ...    1928.0                NaN\n",
+      "            Sunday    132642.0    28072.0  ...    1727.0                NaN\n",
+      "\n",
+      "[50 rows x 15 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "\n",
-    "\n"
+    "df = pd.read_csv('MBTA_Monthly_Ridership.csv', low_memory=False )\n",
+    "# Convert month to string format (e.g., 12 → \"December\")\n",
+    "\n",
+    "\n",
+    "df[\"Month\"] = df[\"month_of_service\"].astype(str).str[5:7]  # Extracts \"MM\" part\n",
+    "\n",
+    "df[\"Year\"] = df[\"month_of_service\"].astype(str).str[0:4]\n",
+    "# Define month mapping\n",
+    "month_map = {\n",
+    "    \"01\": \"January\", \"02\": \"February\", \"03\": \"March\", \"04\": \"April\",\n",
+    "    \"05\": \"May\", \"06\": \"June\", \"07\": \"July\", \"08\": \"August\",\n",
+    "    \"09\": \"September\", \"10\": \"October\", \"11\": \"November\", \"12\": \"December\"\n",
+    "}\n",
+    "\n",
+    "# Apply month name mapping\n",
+    "df[\"Month\"] = df[\"Month\"].map(month_map)\n",
+    "\n",
+    "# Pivot table: Rows = Month, Columns = Route, Values = Average Ridership\n",
+    "pivot_table = df.pivot_table(index=(\"Month\", \"Year\", \"daytype\"), columns=\"route_or_line\", values=\"ridership_average\")\n",
+    "\n",
+    "\n",
+    "print(pivot_table.head(50))"
    ]
   }
  ],
@@ -21,7 +103,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.0"
   }
  },
