--- a/bus-delay-time-analysis/delay-analysis.ipynb
+++ b/bus-delay-time-analysis/delay-analysis.ipynb
@@ -1926,11 +1926,113 @@
     "\n",
     "    count = count + 1 # only want to get a rough understanding, don't need 1000+ diagrams\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'filtered_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m filtered_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mabs_delay\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mfiltered_df\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdelay_seconds\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mabs()\n\u001b[0;32m      3\u001b[0m stats \u001b[38;5;241m=\u001b[39m filtered_df\u001b[38;5;241m.\u001b[39mgroupby(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mstop_id\u001b[39m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mabs_delay\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39magg(\n\u001b[0;32m      4\u001b[0m     average_delay\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmean\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m      5\u001b[0m     min_delay\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmin\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m      6\u001b[0m     max_delay\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmax\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m      7\u001b[0m )\u001b[38;5;241m.\u001b[39mreset_index()\n\u001b[0;32m      9\u001b[0m stops \u001b[38;5;241m=\u001b[39m stats[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mstop_id\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;28mstr\u001b[39m)\u001b[38;5;241m.\u001b[39mtolist()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'filtered_df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "filtered_df['abs_delay'] = filtered_df['delay_seconds'].abs()\n",
+    "\n",
+    "stats = filtered_df.groupby('stop_id')['abs_delay'].agg(\n",
+    "    average_delay='mean',\n",
+    "    min_delay='min',\n",
+    "    max_delay='max'\n",
+    ").reset_index()\n",
+    "\n",
+    "stops = stats['stop_id'].astype(str).tolist()\n",
+    "avg_delays = stats['average_delay'].tolist()\n",
+    "\n",
+    "x_positions = np.arange(len(stops))\n",
+    "\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "plt.bar(x_positions, avg_delays)\n",
+    "\n",
+    "\n",
+    "tick_interval = 50\n",
+    "plt.xticks(x_positions[::tick_interval], [stops[i] for i in x_positions[::tick_interval]], rotation=45)\n",
+    "\n",
+    "plt.xlabel('Stop ID')\n",
+    "plt.ylabel('Average Absolute Delay (seconds)')\n",
+    "plt.title('Average Absolute Delay per Stop')\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Load Bus Stop data for ArcGIS Analysis\n",
+    "pati_df = pd.read_csv(\"PATI_Bus_Stops.csv\", low_memory=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add percentile categories to the average delay \n",
+    "stats['percentile'] = stats['average_delay'].rank(pct=True) * 100\n",
+    "stats['percentile_cat'] = np.minimum((stats['percentile'] // 10).astype(int), 9)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pati_df_renamed = pati_df.rename(columns={'Stop_ID': 'stop_id'})\n",
+    "\n",
+    "merged_stats = stats.merge(pati_df_renamed[['stop_id', 'Longitude', 'Latitude']], on='stop_id', how='left')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save for ArcGIS Analysis\n",
+    "merged_stats.to_csv('MBTA-Delay-Categories-With_Coords-2024-12.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
