updated graph to only include relevant labels

--- a/bus-delay-time-analysis/route-delay-outlier-analysis.ipynb
+++ b/bus-delay-time-analysis/route-delay-outlier-analysis.ipynb
@@ -87,18 +87,23 @@
    "source": [
     "target_routes = {\"22\", \"29\", \"15\", \"45\", \"28\", \"44\", \"42\", \"17\", \"23\", \"31\", \"26\", \"111\", \"24\", \"33\", \"14\"}\n",
     "\n",
+    "avg_delay_per_route = avg_delay_per_route.sort_values(by='average_delay', ascending=True)\n",
+    "\n",
     "\n",
     "colors = ['red' if route in target_routes else 'skyblue' for route in avg_delay_per_route['route_id']]\n",
     "\n",
-    "# Plot a bar chart using the colors list\n",
+    "tick_labels = [route if route in target_routes else '' for route in avg_delay_per_route['route_id']]\n",
+    "\n",
+    "\n",
     "plt.figure(figsize=(12, 6))\n",
     "plt.bar(avg_delay_per_route['route_id'], avg_delay_per_route['average_delay'], color=colors)\n",
     "plt.xlabel('Route')\n",
     "plt.ylabel('Average Absolute Delay (seconds)')\n",
     "plt.title('Average Absolute Delay per Route (Highlighted Routes in Red)')\n",
-    "plt.xticks(rotation=45)\n",
+    "plt.xticks(range(len(avg_delay_per_route)), tick_labels)\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n"
    ]
   }
  ],
