added endtoend readme, added analysis notebook

--- a/end_to_end_target.ipynb
+++ b/end_to_end_target.ipynb
@@ -4,38 +4,89 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Stop Delays and End-to-end Travel Times ##\n",
+    "## End-to-end Travel Times ##\n",
     "\n",
-    "A comparison of the target bus routes - 22, 29, 45, 28, 44, 42, 17, 23, 31, 26, 111, 24, 33, 14\n",
-    "in terms of end-to-end travel times and delays"
+    "A comparison of end-to-end travel times "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd \n",
     "import numpy as np \n",
     "import matplotlib as plt\n",
-    "import endtoend, delay\n",
-    "\n",
-    "\n",
-    "targeted_routes = [22, 29, 45, 28, 44, 42, 17, 23, 31, 26, 111, 24, 33, 14]"
+    "import endtoend\n",
+    "import subprocess"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Section 1: Analyses of delays across routes ##"
+    "## Comparing route durations in December 2024"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__builtins__',\n",
+       " '__cached__',\n",
+       " '__doc__',\n",
+       " '__file__',\n",
+       " '__loader__',\n",
+       " '__name__',\n",
+       " '__package__',\n",
+       " '__spec__',\n",
+       " 'compute_end_to_end_times',\n",
+       " 'datetime',\n",
+       " 'pd',\n",
+       " 'sys',\n",
+       " 'timedelta']"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Consider the end-to-end duration in December 2024...\n",
+    "\n",
+    "df_dec_2024 = pd.read_csv(\"./MBTA_Bus_Ridership_by_Trip_Season_Route_Line_and_Stop/MBTA-Bus-Arrival-Departure-Times_2024-12.csv\")\n",
+    "\n",
+    "## We can compute the durations of each individual stop using endtoend\n",
+    "\n",
+    "dir(endtoend)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'hi' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[15], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mhi\u001b[49m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'hi' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "hi"
+   ]
   }
  ],
  "metadata": {
