Update ridership route analysis notebook

--- a/ridership_route.ipynb
+++ b/ridership_route.ipynb
@@ -52,7 +52,7 @@
     "        year (string): _description_\n",
     "        month (string): _description_\n",
     "        type (string): _description_\n",
-    "        data (pivot): _description_\n",
+    "        data (pivot): _description\n",
     "\n",
     "    Returns:\n",
     "        _type_: _description_\n",
